# scrutinize

./: Cargo.toml  README.MD  build.rs  flake.nix
resources/: com.github.scrutinize.desktop  resources.gresource.xml  scrutinize-mimetypes.xml  scrutinize.desktop  style.css
src/: gguf_parser.rs  heatmap_widget.rs  main.rs  optimized_tokenizer.rs  tensor_slice.rs  tensor_viewer.rs  token_display.rs  tokenizer.rs
src/ui/: window.rs
