[package]
name = "scrutinize"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
gio = "0.20"
glib = "0.20"

[build-dependencies]
glib-build-tools = "0.20"

# Optimizations for release builds
[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"           # Thin Link-Time Optimization (good balance of speed vs compile time)
codegen-units = 1      # Better optimization (slower compile, faster runtime)
strip = true           # Strip symbols to reduce binary size

# Fast development builds with some optimization
[profile.dev]
opt-level = 1          # Basic optimization for bearable debug performance
